# crocodilegenastudio

./: Cargo.toml  README.md  app.js  index.html  package-lock.json  package.json  release.yml  tauri.conf.json
.github/workflows/: release.yml
backend/core_engine/: EpicFix.ini
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: engine.rs  lib.rs  main.rs  models.rs  saves.rs  steam.rs  updates.rs
ui/: app.js  index.html  styles.css
