[package]
name = "crocodile-gena-studio"
version = "3.2.4"
description = "CrocodileGena Studio desktop application"
authors = ["CrocodileGena Studio"]
edition = "2021"

[lib]
name = "crocodile_gena_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-updater = "2"
walkdir = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
